# pandaC

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  main  main.cpp  main.pandac  pandaCClasses.cpp  pandaCClasses.h
app/: CMakeLists.txt  main.cpp
config/: default.conf
docs/: design.md
include/clock/: clock.h
include/compiler/: codeconversion.h  codeconvertion.h  compiler.h  lexer.h  preprocessor.h
include/notifier/: notifier.h
libraries/: ml_trash  ml_trash.cpp  pandaC.cpp  pct.cpp
libraries/PandaML/: PandaML.conf  PandaML.cpp
libraries/ml_trash/: ml_trash.cpp
libraries/pandaC/: pandaC.conf  pandaC.cpp
libraries/pct/: pct.conf  pct.cpp
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
pandaC_files/: 1.pc  2.pc  3.pc  4.pc  5.pc  6.pc  HelloWorld.pc  loop.pc  ml.pc  ml2.pc  pct.pc
pandaC_files/pandaC_build/: 1  1.cpp  2  2.cpp  3  3.cpp  4  4.cpp  5  5.cpp  6  6.cpp  HelloWorld  HelloWorld.cpp  ml.cpp  pct.cpp
src/: CMakeLists.txt
src/clock/: clock.cpp
src/compiler/: codeconversion.cpp  codeconvertion.cpp  compiler.cpp  lexer.cpp  preprocessor.cpp
src/notifier/: notifier.cpp
tests/: CMakeLists.txt  lexer_benchmark.cpp  lexer_test.cpp  matchPattern_test.cpp
